// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Code component Aligned 1`] = `
.c0 {
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;

exports[`A Code component resized 1`] = `
.c0 {
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
  size="xxxxlarge"
>
  Hello
</code>
`;

exports[`A Code component transformed 1`] = `
.c0 {
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;

exports[`A Code component with variant 1`] = `
.c0 {
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;

exports[`A Codet component weight 1`] = `
.c0 {
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;

exports[`A Text component tuncated 1`] = `
.c0 {
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;

exports[`A default Code component 1`] = `
.c0 {
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
}

<code
  className="c0"
>
  Hello
</code>
`;
